Updates to password box

--- a/TnTComponents/Forms/TnTPasswordBox.razor
+++ b/TnTComponents/Forms/TnTPasswordBox.razor
@@ -1,38 +1,44 @@
 ﻿@inherits TnTTextBox
-@{
-    base.BuildRenderTree(__builder);
-}
-@code {
-    protected override RenderFragment GetAdditionalMarkup() {
-        if (AllowPasswordReveal) {
-            return
-    @<button type="button"
-                         class="tnt-password-reveal"
-                         @onmousedown="@(()=>PasswordRevealed = true)"
-                         @onmouseup="@(()=>PasswordRevealed=false)"
-                         @onmouseout="@(()=>PasswordRevealed=false)">
-        @GetPasswordRevealIcon()
-    </button>;
-        }
-        else {
-            return default!;
-        }
-    }
 
+<div theme="@Theme" class="@GetCssClass()">
+    @TnTIconComponent.GetIcon(IconType, Icon)
+    <input aria-label="@Label"
+           type="@(PasswordRevealed ? "text" : "password")"
+           name="@NameAttributeValue"
+           disabled="@Disabled"
+           placeholder="@Placeholder"
+           @ref="@InputElement"
+           @bind="@CurrentValueAsString"
+           @onfocusin="OnFocusIn"
+           @onfocusout="OnFocusOut" />
 
-    private RenderFragment GetPasswordRevealIcon() {
-        switch (IconType) {
-            case IconType.FontAwesome:
-                return @<i class="fa fa-eye@(PasswordRevealed ? "-slash" : string.Empty)"></i>;
-            case IconType.MaterialIcons:
-                if (PasswordRevealed) {
-                    return @<i class="material-icons">visibility_off</i>;
+    <label class="@GetLabelCssClass()" @onclick="SetInputFocus">@Label</label>
+
+    @switch (IconType) {
+        case IconType.FontAwesome:
+            <i class="tnt-password-reveal fa fa-eye@(PasswordRevealed ? "-slash" : string.Empty)"
+               @onmousedown="@(() => PasswordRevealed = true)"
+               @onmouseup="@(() => PasswordRevealed = false)"
+               @onmouseout="@(() => PasswordRevealed = false)"></i>
+            break;
+
+        case IconType.MaterialIcons:
+            <i class="tnt-password-reveal material-icons" @onmousedown="@(() => PasswordRevealed = true)"
+               @onmouseup="@(() => PasswordRevealed = false)"
+               @onmouseout="@(() => PasswordRevealed = false)">
+                @if (PasswordRevealed) {
+                    <text>visibility_off</text>
                 }
                 else {
-                    return@<i class="material-icons">visibility</i>;
+                    <text>visibility</text>
                 }
-            default:
-                throw new NotImplementedException();
-        }
+            </i>
+            break;
+
+        default:
+            throw new NotImplementedException();
     }
-}
+
+
+</div>
+<ValidationMessage class="@GetValidationMessageCssClass()" theme="@Theme" For="ValueExpression" />
