--- a/TnTComponents/_Imports.razor
+++ b/TnTComponents/_Imports.razor
@@ -2,3 +2,4 @@
 @using TnTComponents.Common
 @using TnTComponents.Enum;
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Forms
