--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -42,10 +42,8 @@
     <TnTBody SideBarExpanded="@_sideBarExpanded">
         <TnTForm FormType="@_formType" TModelType="MyModel" Model="@_model" OnValidSubmit="@Submit" OnInvalidSubmit="@InvalidSubmit">
             <DataAnnotationsValidator />
-            <TnTTextBoxV3 Icon="@_icon" @bind-Value="_model.Name" Label="My Label" Placeholder="My Placeholder" Disabled="@disabled" />
-            <TnTTextBoxV3 Icon="@_icon" @bind-Value="_model.Name" Label="My Label" Disabled="@disabled" />
-            <TnTTextBox @bind-Value="_model.Name" Label="Name" />
-            <TnTPasswordBox @bind-Value="_model.Password" AllowPasswordReveal="true" Label="Password" />
+            <TnTTextBox Icon="@_icon" @bind-Value="_model.Name" Label="My Label" Placeholder="@_placeholder" Disabled="@disabled" />
+            <TnTPasswordBox Icon="@_icon" @bind-Value="_model.Password" Label="Password" Placeholder="@_placeholder" Disabled="@disabled" AllowPasswordReveal="true" />
             <TnTNumeric @bind-Value="_model.Number" Label="Number" />
             <TnTCheckbox @bind-Value="_model.Value" Label="Value" />
             <button type="submit">
@@ -60,7 +58,9 @@
 
         </TnTButton>
         <TnTButton Text="Toggle Icon" OnClick="@(() => ToggleIcon())">
+        </TnTButton>
 
+        <TnTButton Text="Toggle Placeholder" OnClick="@(() => TogglePlaceholder())">
         </TnTButton>
     </TnTBody>
 </TnTLayout>
@@ -87,6 +87,8 @@
 
     private string _icon = string.Empty;
 
+    private string _placeholder = string.Empty;
+
     private void RotateFormType() {
         switch (_formType) {
             case FormType.Underlined:
@@ -112,11 +114,21 @@
         }
     }
 
+    private void TogglePlaceholder() {
+        if (string.IsNullOrWhiteSpace(_placeholder)) {
+            _placeholder = "My Placeholder";
+        }
+        else {
+            _placeholder = string.Empty;
+        }
+    }
+
     class MyModel {
         [Required]
-        [StringLength(10, ErrorMessage = "Id is too long.")]
+        [StringLength(10)]
         public string Name { get; set; }
         [Required]
+        [StringLength(10)]
         public string Password { get; set; }
         public int Number { get; set; }
         public bool Value { get; set; }
