--- a/TnTComponents/Styles/Components/forms/_textbox.scss
+++ b/TnTComponents/Styles/Components/forms/_textbox.scss
@@ -374,6 +374,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    cursor: text;
 
     input {
         background-color: transparent;
@@ -389,6 +390,10 @@
         &:focus {
             outline: none;
         }
+    }
+
+    input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
+        display: none
     }
 
     &.disabled:hover {
@@ -469,10 +474,8 @@
         align-items: center;
         border: none;
         padding: 0;
-
-        & > i {
-            font-size: 1.5rem;
-        }
+        font-size: 1.5rem;
+        user-select: none;
     }
 
     &.disabled:hover .tnt-password-reveal {
@@ -481,12 +484,6 @@
 
     &:hover .tnt-password-reveal {
         visibility: visible;
-    }
-
-    + .helper-text {
-        font-size: .8rem;
-        padding-left: 1rem;
-        transform: translateY(-1rem);
     }
 }
 
