--- a/TnTComponents/Styles/Components/forms/_textbox.scss
+++ b/TnTComponents/Styles/Components/forms/_textbox.scss
@@ -243,6 +243,9 @@
 
         & > .tnt-form-field-label {
             color: $tnt-color-error;
+            border-top: 1px solid $tnt-color-error;
+            border-start-start-radius: .5rem;
+            border-start-end-radius: .5rem;
         }
 
         &.disabled {
@@ -250,6 +253,7 @@
 
             & > .tnt-form-field-label {
                 color: color.adjust($tnt-color-error, $alpha: -0.6);
+                border-top: 1px solid color.adjust($tnt-color-error, $alpha: -0.6);
             }
         }
 
@@ -415,7 +419,7 @@
         left: 0;
         text-align: initial;
         cursor: text;
-        transition: transform 150ms ease-in-out, color 150ms ease-in-out;
+        transition: 150ms ease-in-out;
         transform-origin: 0% 100%;
         transform: translateY(0.6rem);
         user-select: none;
