--- a/TnTComponents/Styles/Components/forms/_numeric.scss
+++ b/TnTComponents/Styles/Components/forms/_numeric.scss
@@ -1,5 +1,13 @@
 ﻿.tnt-form-field {
 
+    input[type=number]::-webkit-outer-spin-button,
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number] {
+        -webkit-appearance: none;
+        margin: 0;
+        -moz-appearance: none;
+    }
+
     .tnt-numeric-input-buttons {
         visibility: hidden;
         display: flex;
