--- a/TnTComponents/Forms/TnTNumeric.razor
+++ b/TnTComponents/Forms/TnTNumeric.razor
@@ -7,6 +7,7 @@
            name="@NameAttributeValue"
            disabled="@Disabled"
            placeholder="@Placeholder"
+           type="number"
            @ref="@InputElement"
            @bind="@CurrentValueAsString"
            @onfocusin="OnFocusIn"
