--- a/TnTComponents/Styles/Components/forms/_form.scss
+++ b/TnTComponents/Styles/Components/forms/_form.scss
@@ -1,5 +1,22 @@
 @use "sass:color";
 
+.tnt-form-field-message[theme=default] {
+    color: $tnt-color-error;
+
+    &.disabled {
+        color: color.adjust($tnt-color-error, $alpha: -0.6);
+    }
+}
+
+.tnt-form-field-message {
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-top: 0.2rem;
+    margin-bottom: 2rem;
+    margin-left: 0.5rem;
+    transition: 150ms;
+}
+
 .tnt-form {
     display: block;
     margin-top: 1rem;
