--- a/TnTComponents/Forms/TnTPasswordBox.razor
+++ b/TnTComponents/Forms/TnTPasswordBox.razor
@@ -9,8 +9,8 @@
            placeholder="@Placeholder"
            @ref="@InputElement"
            @bind="@CurrentValueAsString"
-           @onfocusin="OnFocusIn"
-           @onfocusout="OnFocusOut" />
+           @onfocusin="OnFocusInAsync"
+           @onfocusout="OnFocusOutAsync" />
 
     <label class="@GetLabelCssClass()" @onclick="SetInputFocus">@Label</label>
 
